; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_mpv_unobserve_property.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_mpv_unobserve_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, %struct.observe_property** }
%struct.observe_property = type { i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mpv_unobserve_property(%struct.TYPE_4__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.observe_property*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  %10 = call i32 @pthread_mutex_lock(i32* %9)
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  br label %11

11:                                               ; preds = %44, %2
  %12 = load i32, i32* %6, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = icmp slt i32 %12, %15
  br i1 %16, label %17, label %47

17:                                               ; preds = %11
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 2
  %20 = load %struct.observe_property**, %struct.observe_property*** %19, align 8
  %21 = load i32, i32* %6, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.observe_property*, %struct.observe_property** %20, i64 %22
  %24 = load %struct.observe_property*, %struct.observe_property** %23, align 8
  store %struct.observe_property* %24, %struct.observe_property** %7, align 8
  %25 = load %struct.observe_property*, %struct.observe_property** %7, align 8
  %26 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* %4, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %30, label %43

30:                                               ; preds = %17
  %31 = load %struct.observe_property*, %struct.observe_property** %7, align 8
  %32 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %43, label %35

35:                                               ; preds = %30
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %37 = load i32, i32* %6, align 4
  %38 = call i32 @mark_property_changed(%struct.TYPE_4__* %36, i32 %37)
  %39 = load %struct.observe_property*, %struct.observe_property** %7, align 8
  %40 = getelementptr inbounds %struct.observe_property, %struct.observe_property* %39, i32 0, i32 1
  store i32 1, i32* %40, align 8
  %41 = load i32, i32* %5, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %5, align 4
  br label %43

43:                                               ; preds = %35, %30, %17
  br label %44

44:                                               ; preds = %43
  %45 = load i32, i32* %6, align 4
  %46 = add nsw i32 %45, 1
  store i32 %46, i32* %6, align 4
  br label %11

47:                                               ; preds = %11
  %48 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %48, i32 0, i32 1
  %50 = call i32 @pthread_mutex_unlock(i32* %49)
  %51 = load i32, i32* %5, align 4
  ret i32 %51
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @mark_property_changed(%struct.TYPE_4__*, i32) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
